[package]
name = "RemoteGUI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build]
target = "armv7-unknown-linux-musleabihf"
[target.armv7-unknown-linux-c]
linker = "arm-linux-gnueabihf-ld"



[dependencies]
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_12"] }

